# EdgeWisePersona

./: .gitignore  README.md  pyproject.toml
src/edgewisepersona/benchmark/: compare_models.ipynb  get_predictions.py  utils.py
src/edgewisepersona/definitions/: character.py  device_state.py  routine.py  session.py  triggers.py
